# infotecs

./: CMakeLists.txt  Dockerfile  Readme.txt
linux_build/: CMakeCache.txt  Makefile  cmake_install.cmake
win_build/: ALL_BUILD.vcxproj.filters  ZERO_CHECK.vcxproj.filters  sqlite3lib.sln
win_build/Release/: sqlite3.exp
win_build/sqlite3.dir/Release/: sqlite3.dll.recipe
win_build/sqlite3.dir/Release/sqlite3.tlog/: CL.command.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.write.1.tlog
win_build/x64/Release/ALL_BUILD/: ALL_BUILD.recipe
win_build/x64/Release/ALL_BUILD/ALL_BUILD.tlog/: CustomBuild.command.1.tlog
win_build/x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog
